# coursework

./: .env  .env.template  .gitignore  README.md  pyproject.toml  report_spending_by_category.json  report_spending_by_weekday.json  report_spending_by_workday.json  user_settings.json
data/: operations.xlsx
reports/: spending_by_category_20250902_191716.json  spending_by_weekday_20250902_191716.json  spending_by_workday_20250902_191716.json
src/: config.py  main.py  reports.py  services.py  servieses.py  utils.py  views.py
tests/: test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
